- porzadki zwiazane z oknem rejestracji uzytkownika GG.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@586 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -26,6 +26,7 @@
   kadu<=>kadu, ale kod wymaga jeszcze troszke pracy
 * przypominanie has³a nie blokuje kadu
 * dodane okno zmiany has³a GG
+* porz±dki zwi±zane z oknem rejestracji u¿ytkonwika GG
 
 +++ wersja 0.3.3-pre3
 * CTRL + klik dowolnego przycisku myszki na ikonce w tray'u powoduje
