--- a/ChangeLog
+++ b/ChangeLog
@@ -26,7 +26,7 @@
   kadu<=>kadu, ale kod wymaga jeszcze troszke pracy
 * przypominanie has³a nie blokuje kadu
 * dodane okno zmiany has³a GG
-* porz±dki zwi±zane z oknem rejestracji u¿ytkonwika GG
+* porz±dki zwi±zane z oknem rejestracji u¿ytkownika GG
 
 +++ wersja 0.3.3-pre3
 * CTRL + klik dowolnego przycisku myszki na ikonce w tray'u powoduje
