zmiany zwiazane z geometria userboxu
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@589 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -27,6 +27,8 @@
 * przypominanie has³a nie blokuje kadu
 * dodane okno zmiany has³a GG
 * porz±dki zwi±zane z oknem rejestracji u¿ytkownika GG
+* zapisywanie pozycji podzia³u userlist(userbox) a opisem + poprawki zapisywania
+  geometri okna i waro¶ci domy¶lnych
 
 +++ wersja 0.3.3-pre3
 * CTRL + klik dowolnego przycisku myszki na ikonce w tray'u powoduje
