- dane osobiste: kosmetyka wygladu okna.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@598 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -33,6 +33,7 @@
   w userboxie, który pokazuje dane u¼ytkownika + zmiany w sposobie zapisu konfiguracji
   kolorów i czcionek.
 * dodane okno wyrejestrowania u¿ytkownika GG
+* dane osobiste: kosmetyka wygl±du okna
 
 +++ wersja 0.3.3-pre3
 * CTRL + klik dowolnego przycisku myszki na ikonce w tray'u powoduje
