--- a/ChangeLog
+++ b/ChangeLog
@@ -34,6 +34,8 @@
   kolorów i czcionek.
 * dodane okno wyrejestrowania u¿ytkownika GG
 * dane osobiste: kosmetyka wygl±du okna
+* konfiguracja: testowanie d¼wiêków uzglêdnia zmiany dokonane w polach konfiguracji
+  plików d¼wiêkowych
 
 +++ wersja 0.3.3-pre3
 * CTRL + klik dowolnego przycisku myszki na ikonce w tray'u powoduje
