export/import userlisty z pliku, usuwanie z serwera
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@608 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -42,6 +42,8 @@
   zasz³y zmiany w wygl±dzie
 * szyfrowanie: generowanie tylko kluczy 1024 bity (innych nie obs³uguje protokó³)
 * szyfrowanie: poprawki kosmetyczne interfejsu u¿ytkownika i samego kodu
+* dodanie opcji usuwania userlisty z serwera, import/export userlisty z 
+  pliku
 
 +++ wersja 0.3.3-pre3
 * CTRL + klik dowolnego przycisku myszki na ikonce w tray'u powoduje
