--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
++++ wersja 0.3.3-pre5
+* wszystkie? wiadomo¶ci od u¿ytkowników powinny wpadaæ do okna rozmowy
+* je¶li nie mamy po³±czenia z internetem, a tym samym gg_login() zwróci NULL
+  to kadu nie wywala siê?
+
 +++ wersja 0.3.3-pre4
 * przy imporcie listy u¿ytkowników ustawiamy domy¶lne atrybuty u¿ytkowników
 * poprawki zwi±zane z zarz±dzaniem widoczno¶ci± ikony programu w tray'u
