- mozna dodawac wielu uzytkownikow, ktorzy nie maja swojego uina.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@619 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 * wszystkie? wiadomo¶ci od u¿ytkowników powinny wpadaæ do okna rozmowy
 * je¶li nie mamy po³±czenia z internetem, a tym samym gg_login() zwróci NULL
   to kadu nie wywala siê?
+* mo¿na dodawaæ wielu u¿ytkowników, którzy nie maj± swojego uina
 
 +++ wersja 0.3.3-pre4
 * przy imporcie listy u¿ytkowników ustawiamy domy¶lne atrybuty u¿ytkowników
