zapetlanie sie kadu jesli mamy wybrany nie istniejacy zestaw
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@623 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,7 @@
 * mo¿liwo¶æ usuniêcia z listy wielu u¿ytkowników na raz
 * okno dodawania u¿ytkownika: nie mo¿na dodaæ do listy u¿ytkownika, który
   ma puste pole "altnick"
+* emotikony: kadu nie zapêtla siê jesli mamy ustawiony nie istniej±cy juz zestaw
 
 +++ wersja 0.3.3-pre4
 * przy imporcie listy u¿ytkowników ustawiamy domy¶lne atrybuty u¿ytkowników
