- okno rozmowy: mozliwosc zmieniania proporcji pomiedzy widokiem historii rozmowy, a reszta okna.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@627 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,8 @@
 * okno dodawania u¿ytkownika: nie mo¿na dodaæ do listy u¿ytkownika, który
   ma puste pole "altnick"
 * emotikony: kadu nie zapêtla siê jesli mamy ustawiony nie istniej±cy juz zestaw
+* okno rozmowy: mo¿liwo¶æ zmieniania proporcji pomiêdzy widokiem historii rozmowy,
+  a reszt± okna
 
 +++ wersja 0.3.3-pre4
 * przy imporcie listy u¿ytkowników ustawiamy domy¶lne atrybuty u¿ytkowników
