usunalem --bramka-org
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@631 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -11,6 +11,7 @@
 * emotikony: kadu nie zapêtla siê jesli mamy ustawiony nie istniej±cy juz zestaw
 * okno rozmowy: mo¿liwo¶æ zmieniania proporcji pomiêdzy widokiem historii rozmowy,
   a reszt± okna
+* sms: znowu powinny dzia³aæ era i plus. Idea w przygotowaniu
 
 +++ wersja 0.3.3-pre4
 * przy imporcie listy u¿ytkowników ustawiamy domy¶lne atrybuty u¿ytkowników
