--- a/AUTHORS
+++ b/AUTHORS
@@ -12,5 +12,5 @@ programista, twórca wersji polskiej
 Dariusz Jagodzik <mast3r at kadu dot net>
 programista
 
-Roman Krzystyniak <Krzystyniak dot Roman at Jezus dot pl>
+Roman Krzystyniak <Ron_K at tlen dot pl>
 dokumentacja projektu, aktualizacja wersji polskiej
