--- a/FAQ
+++ b/FAQ
@@ -1,55 +1,2 @@
-Naj¶wie¿sze informacje mo¿esz znale¼æ w pliku doc/faq.html
+Naj¶wie¿sze informacje znajduj± siê w pliku doc/faq.html
 
-Q: Skrypt nie znajduje mojego QT. Dlaczego?!
-A: Automake/autoconf w Kadu wymaga przetestowania.
-   Wypróbuj opcje --with-qt-dir=/katalog/do/qt oraz
-   --disable-mt
-
-Q: Jestem za firewallem. Czy mogê u¿ywaæ Kadu?
-A: Tak, mo¿esz u¿yæ proxy, popatrz na zmienne w sekcji Proxy
-   w pliku kadu.conf
-
-Q: Kadu mówi, co¶ o "Permission denied" albo "Connection reset
-   by peer", ale pod Windows GG dzia³a. O co chodzi?
-A: Prawdopodobnie masz ¼le wpisane has³o. Nawet, je¶li dot±d
-   dzia³a³o, to w wersjach 0.3.0 i nowszych jest inaczej kodowane
-   i dlatego nale¿y wpisaæ je od nowa.
-
-Q: Nie dzia³a mi logowanie i historia. Co jest nie tak?
-A: Najprawdopodobniej nie masz w³±czonej opcji "Log messages" w
-   konfiguracji. Sprawd¼ te¿, czy masz katalog ~/.gg/history/ i
-   czy ma on odpowiednie prawa (tzn. zapisu dla u¿ytkownika)
-
-Q: Jak mogê przenie¶æ listê u¿ytkowników z Windowsowego GG?
-A: S± dwa sposoby - b±d¼ zaimportowaæ j± z serwera (po uprzednim
-   wyeksportowaniu w GG), b±d¼ po prostu skopiowaæ wyeksportowany
-   na dysk plik z userlist± do ~/.gg/userlist -- Kadu i EKG u¿ywaj± takiego
-   samego formatu plików z list± u¿ytkowników jak GG.
-
-Q: Czy dzia³a przesy³anie plików?
-A: Tak. Spójrz do konfiguracji. UWAGA: to nie jest stabilny kod.
-
-Q: Zamiast obrazków pojawiaj± mi siê kwadraciki. Co jest ¼le?
-A: Nie masz ustawionej ¶cie¿ki do obrazków lub brakuje tam niektórych
-   (lub wszystkich) z nich. W kadu.conf jest to pozycja EmoticonsPath.
-   Je¶li ¶cie¿ka jest napewno prawid³owa to znaczy, ¿e masz ¼le
-   skompilowane QT. Przekompiluj upewniaj±c siê, ¿e u¿ywasz w configure
-   opcji --system-png
-
-Q: Kadu w ogóle nie chce siê kompilowaæ. Co robiæ?
-A: Mo¿esz np. spróbowaæ ¶ci±gn±æ RPMa. Szczegó³y na stronie.
-
-Q: Podczas kompilacji wy¶wietlaj± mi siê informacje o jakim¶ undefined
-   reference to gg_*
-A: W katalogu kadu/kadu w pliku Makefile dodaj na koñcu:
-
-   ../libgadu/lib/libgadu.a:
-	cd ../libgadu; ./configure;
-	make -C ../libgadu;
-	strip -g ../libgadu/lib/libgadu.a;
-
-   Pamiêtaj, ¿e odstêpy to tabulatory, nie spacje! Teraz make powinien
-   grzecznie znale¼æ libgadu.a i siê z nim zlinkowaæ.
-
-Q: Podczas kompilacji mam komunikaty, ¿e brakuje plików *.moc
-A: Na systemie FreeBSD pomaga u¿ywanie gmake zamiast make
