--- a/TODO
+++ b/TODO
@@ -49,3 +49,4 @@
    (kontynuowanie prac nad jêzykiem skryptowym v-user) 
  ? przechowywanie maili userów i uruchamianie klienta mail
  - mechanizm plugin-ów
+ + obs³uga unikodu
