educja UIN kontaktu
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@633 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/TODO
+++ b/TODO
@@ -37,6 +37,8 @@
  ? rozbudowa opcji ignorowania o blokowanie
  ? autostatus (zmiana z listy co jaki¶ czas)
  ! dodaæ do pliku AUTHORS sekcjê "Byli autorzy"
+ + Umozliwic edycje UIN kontaktu poprzez wywolanie z menu 
+   "Pokaz/zmien informacje o kontakcie"
 
  
  TODO dla wersji pó¼niejszych
