- powiadamianie dzwiekiem o zmianie statusu kontaktow nastepuje tylko wtedy, gdy czas jaki minal od ostatniego takiego zdarzenia wynosi 500ms
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@643 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -16,9 +16,11 @@
 * szyfrowanie: odbierania klucza publicznego nie powoduje padów aplikacji, a ponadto
   zatwierdzenie jego zapisania powoduje uaktywnienie guzika "encryption" w rozmowie
   prowadzonej z osob±, która do nas przys³a³a swój klucz publiczny
-* sms: wysy³anie sms'ów (Idea) wewnêtrznym mechanizmem kadu (z wy¶wietlaniem
-  obrazka ze strony sms.idea.pl). Dwie pozosta³e sieci zostan± równie¿ w krótce
+* sms: wysy³anie smsów (Idea) wewnêtrznym mechanizmem kadu (z wy¶wietlaniem
+  obrazka ze strony sms.idea.pl). Dwie pozosta³e sieci zostan± równie¿ wkrótce
   zaimplementowane.
+* powiadamianie d¼wiêkiem o zmianie statusu kontaktów nastêpuje tylko wtedy, gdy
+  czas jaki min±³ od ostatniego takiego zdarzenia wynosi 500ms
 
 +++ wersja 0.3.3-pre4
 * przy imporcie listy u¿ytkowników ustawiamy domy¶lne atrybuty u¿ytkowników
