--- a/ChangeLog
+++ b/ChangeLog
@@ -20,7 +20,7 @@
   obrazka ze strony sms.idea.pl). Dwie pozosta³e sieci zostan± równie¿ wkrótce
   zaimplementowane.
 * powiadamianie d¼wiêkiem o zmianie statusu kontaktów nastêpuje tylko wtedy, gdy
-  czas jaki min±³ od ostatniego takiego zdarzenia wynosi 500ms
+  czas jaki min±³ od ostatniego takiego zdarzenia przekracza 500ms
 
 +++ wersja 0.3.3-pre4
 * przy imporcie listy u¿ytkowników ustawiamy domy¶lne atrybuty u¿ytkowników
