--- a/ChangeLog
+++ b/ChangeLog
@@ -21,8 +21,8 @@
 * okno rozmowy: SHIFT+PageUp, PageUp - przesuwaj± historiê rozmowy do góry,
   SHIFT+PageDown, PageDown - przesuwaj± historiê rozmowy do do³u
 * sms: wysy³anie smsów wewnêtrznym mechanizmem kadu (z ew. wy¶wietlaniem
-  obrazka ze strony sms.idea.pl). Program sms Miko³aja Rydzewskiego
-  zostanie wkrótce usuniêty ze ¼róde³
+  obrazka ze strony sms.idea.pl). Program SMS Miko³aja Rydzewskiego
+  zosta³ usuniêty ze ¼róde³
 
 +++ wersja 0.3.3-pre4
 * przy imporcie listy u¿ytkowników ustawiamy domy¶lne atrybuty u¿ytkowników
