- sms.cpp masz szanse kompilowac sie na Qt < 3.0.5
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@661 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
++++ wersja 0.3.3-final
+* sms.cpp masz szansê kompilowaæ siê na Qt < 3.0.5
+
 +++ wersja 0.3.3-pre5
 * wszystkie? wiadomo¶ci od u¿ytkowników powinny wpadaæ do okna rozmowy
 * je¶li nie mamy po³±czenia z internetem, a tym samym gg_login() zwróci NULL
