- * przy odebraniu blednej wiadomosci dcc ctcp nie powinno wywalac sie.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@662 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 +++ wersja 0.3.3-final
 * sms.cpp masz szansê kompilowaæ siê na Qt < 3.0.5
+* przy odebraniu b³êdnej wiadomo¶ci dcc ctcp nie powinno wywalaæ siê
 
 +++ wersja 0.3.3-pre5
 * wszystkie? wiadomo¶ci od u¿ytkowników powinny wpadaæ do okna rozmowy
