- ESCAPE zamyka okno rozmowy - korekta.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@666 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
 * czeski b³±d powodowa³, ¿e mesgi mog³y nie wpadaæ do okna rozmowy
 * okna dialogowe z powiadomieniami o zmianie statusu u¿ytkowników
   nie powinny wywalaæ kadu
+* ESCAPE zamyka okno rozmowy
 
 +++ wersja 0.3.3-pre5
 * wszystkie? wiadomo¶ci od u¿ytkowników powinny wpadaæ do okna rozmowy
