- * locales jest obslugiwane bez posrednictwa KDE.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@670 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@
 * okna dialogowe z powiadomieniami o zmianie statusu u¿ytkowników
   nie powinny wywalaæ kadu
 * wci¶niêcie klawisza escape zamyka okno rozmowy
+* locales jest obs³ugiwane bez po¶rednictwa KDE
 
 +++ wersja 0.3.3-pre5
 * wszystkie? wiadomo¶ci od u¿ytkowników powinny wpadaæ do okna rozmowy
