- obsluga pliku konfiguracyjnego kadu.conf bez posrednictwa KDE.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@677 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@
   nie powinny wywalaæ kadu
 * wci¶niêcie klawisza escape zamyka okno rozmowy
 * locales jest obs³ugiwane bez po¶rednictwa KDE
+* obs³uga pliku konfiguracyjnego kadu.conf bez po¶rednictwa KDE
 
 +++ wersja 0.3.3-pre5
 * wszystkie? wiadomo¶ci od u¿ytkowników powinny wpadaæ do okna rozmowy
