- kadu nie uzywa klas KDE do obslugi ikon.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@682 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,7 @@
 * wci¶niêcie klawisza escape zamyka okno rozmowy
 * locales jest obs³ugiwane bez po¶rednictwa KDE
 * obs³uga pliku konfiguracyjnego kadu.conf bez po¶rednictwa KDE
+* kadu nie u¿ywa klas KDE do obs³ugi ikon
 
 +++ wersja 0.3.3-pre5
 * wszystkie? wiadomo¶ci od u¿ytkowników powinny wpadaæ do okna rozmowy
