--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,8 @@
 * locales jest obs³ugiwane bez po¶rednictwa KDE
 * obs³uga pliku konfiguracyjnego kadu.conf bez po¶rednictwa KDE
 * kadu nie u¿ywa klas KDE do obs³ugi ikon
+* TrayIcon jest oddzieln± klas± w której mo¿na zrobiæ obs³ugê ikon z
+  ró¿nych mened¿erów okien
 
 +++ wersja 0.3.3-pre5
 * wszystkie? wiadomo¶ci od u¿ytkowników powinny wpadaæ do okna rozmowy
