trayicon bez kdelibs
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@689 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -11,6 +11,8 @@
 * TrayIcon jest oddzieln± klas± w której mo¿na zrobiæ obs³ugê ikon z
   ró¿nych mened¿erów okien
 * mo¿liwo¶æ w³±czenia/wy³±czenia TrayIcon w trakcie dzia³ania programu
+* obs³uga dokowania (TrayIcon) bez po¶rednictwa KDE. Powinno dzia³aæ
+  miêdzy innymi pod GNOME
 
 +++ wersja 0.3.3-pre5
 * wszystkie? wiadomo¶ci od u¿ytkowników powinny wpadaæ do okna rozmowy
