- okno wyboru statusu (pojawiajace sie po kliknieciu pola z naszym statusem) zawsze pokazuje sie we wlasciwym miejscu.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@698 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -15,6 +15,8 @@
   miêdzy innymi pod GNOME
 * okno informacji o u¿ytkowniku: zmiana pola "Wy¶wietl" aktualizuje
   okna rozmów które maj± w tytule star± nazwê u¿ytkownika
+* okno wyboru statusu (pojawiaj±ce siê po klikniêciu pola z naszym
+  statusem) zawsze pokazuje siê we w³a¶ciwym miejscu
 
 +++ wersja 0.3.3-pre5
 * wszystkie? wiadomo¶ci od u¿ytkowników powinny wpadaæ do okna rozmowy
