- glowne okno programu mozna zmniejszac dowolnie po przeladowaniu kadu.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@699 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -17,6 +17,7 @@
   okna rozmów które maj± w tytule star± nazwê u¿ytkownika
 * okno wyboru statusu (pojawiaj±ce siê po klikniêciu pola z naszym
   statusem) zawsze pokazuje siê we w³a¶ciwym miejscu
+* g³ówne okno programu mo¿na zmniejszaæ dowolnie po prze³adowaniu kadu
 
 +++ wersja 0.3.3-pre5
 * wszystkie? wiadomo¶ci od u¿ytkowników powinny wpadaæ do okna rozmowy
