- okno konfiguracji: mozna testowac dzwieki po zmianie programu do ich odgrywania.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@703 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -18,6 +18,8 @@
 * okno wyboru statusu (pojawiaj±ce siê po klikniêciu pola z naszym
   statusem) zawsze pokazuje siê we w³a¶ciwym miejscu
 * g³ówne okno programu mo¿na zmniejszaæ dowolnie po prze³adowaniu kadu
+* okno konfiguracji: mo¿na testowaæ d¼wiêki po zmianie programu do
+  ich odgrywania
 
 +++ wersja 0.3.3-pre5
 * wszystkie? wiadomo¶ci od u¿ytkowników powinny wpadaæ do okna rozmowy
