zmiana maila i kosmetyka
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@706 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,16 +1,16 @@
 Autorzy Kadu:
 
-Tomasz Jarzynka <tomee at cpi dot pl>
+Tomasz Jarzynka <tomee (at) cpi (dot) pl>
 twórca projektu, programista, grafik
 
-Tomasz Chiliñski <chilek at chilan dot com>
+Tomasz Chiliñski <chilek (at) chilan (dot) com>
 programista, opiekun serwera kadu.net
 
-Adrian Smarzewski <adrians at aska dot com dot pl>
+Adrian Smarzewski <adrian (at) kadu (dot) net>
 programista, twórca wersji polskiej
 
-Dariusz Jagodzik <mast3r at kadu dot net>
+Dariusz Jagodzik <mast3r (at) kadu (dot) net>
 programista
 
-Roman Krzystyniak <Ron_K at tlen dot pl>
+Roman Krzystyniak <Ron_K (at) tlen (dot) pl>
 dokumentacja projektu, aktualizacja wersji polskiej
