--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 +++ wersja 0.3.3-rc2
 * sporo poprawek dla FreeBSD
+* gdy mamy status domy¶lny "niedostêpny" to nie ginie nam zapamiêtany opis statusu
 
 +++ wersja 0.3.3-rc1
 * sms.cpp ma szansê kompilowaæ siê na Qt < 3.0.5
